--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.10",
+    "@tinymce/tinymce-react": "^4.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.14.3",
     "lucide-react": "^0.344.0",
+    "mongoose": "^8.2.1",
     "next": "14.1.0",
     "prettier": "^3.2.5",
     "react": "^18",
@@ -31,6 +33,7 @@
     "react-hook-form": "^7.51.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "tinymce": "^6.8.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
